--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>HelloWorld</title>
+        <script type="module" src="/src/index.tsx"></script>
+    </head>
+    <body style='margin:0; font-family:"Roboto","Helvetica","Arial","sans-serif";'>
+        <div id="appRoot"></div>
+    </body>
 </html>
